--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "date-fns": "^4.1.0",
     "jose": "^6.0.8",
     "lucide-react": "^0.476.0",
+    "monent": "^0.0.2-security",
     "next": "15.1.7",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
@@ -37,6 +38,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/moment": "^2.13.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
